--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -9,13 +9,17 @@
 {% block content %}
 
     <h1>Log-in</h1>
-    {% if form.erros %}
+    {% if form.errors %}
 
         <p>Your username and password did not match. Please try again!</p>
 
     {% else %}
 
-        <p>Kindly use the following form to log-in</p>
+        <p>
+            Kindly use the following form to log-in
+            If you don't have an account <a href="{% url 'register' %}">register here</a>.
+        </p>
+        
 
     {% endif %}
 
@@ -26,7 +30,15 @@
             <input type="hidden" name="next" value="{{next}}" />
             <p><input type="submit" value="Log in" ></p>
         </form>
+        
+        <p>
+            <a href="{% url "password_reset" %}">
+            Forgotten your password?
+            </a>
+        </p>
     </div>
+
+    
 
         
 {% endblock content %}
