--- a/account/templates/registration/logout.html
+++ b/account/templates/registration/logout.html
@@ -11,7 +11,7 @@
     <h1>Logged out</h1>
     <P>
         You have been successfully logged out.
-        You can <a href="{% url 'index' %}">log-in again</a>
+        You can <a href="{% url 'login' %}">log-in</a> again.
     </P>
     
 {% endblock content %}
