--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -6,7 +6,10 @@
 {% block content %}
 
     <h1>Dashboard</h1>
-    <p>Welcome to your dashboard</p>
+    <p>
+        Welcome to your dashboard.You can <a href="{% url 'edit_profile' %}"> edit youur profile </a> or <a href="{% url 'password_change' %}">change your passowrd</a>
+
+    </p>
 
     
 {% endblock content %}
