social media authentication

--- a/account/static/css/base.css
+++ b/account/static/css/base.css
@@ -144,7 +144,7 @@ ul.messages li.info {
     margin:0;
     padding:14px 20px;
     list-style:none;
-    color:#fff;
+    color:#ffffff;
 }
 
 ul.messages li.success { background:#81ce81; }
