--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -38,7 +38,14 @@
         </p>
     </div>
 
-    
+    <div class="social">
+        <ul>
+            <li class="facebook">
+                <a href="{% url 'social:begin' 'facebook' %}">Sign in with Facebook</a>
+            </li>
+        </ul>
+    </div>
+        
 
         
 {% endblock content %}
