--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -8,7 +8,7 @@
     <h1>Dashboard</h1>
     {% with total_images_created=request.user.images_created.count %}
         <p>
-            Welcome to your dashboard. You have bookmarked {{total_images_created }} images {{total_images_created|pluralize}}.
+            Welcome to your dashboard. You have bookmarked {{total_images_created }} image{{total_images_created|pluralize}}.
         </p>
     {% endwith %}
 
@@ -20,6 +20,13 @@
         You can <a href="{% url 'edit_profile' %}"> edit your profile </a> or <a href="{% url 'password_change' %}">change your passowrd</a>
 
     </p>
+
+    <h2> What's happening </h2>
+    <div id="action-list">
+        {% for action in actions  %}
+            {% include "actions/action/detail.html" %}
+        {% endfor %}
+    </div>
 
     
 {% endblock content %}
